syntax = "proto3";

message SmartMeterRuntimePropertyUpload {
   optional int32 display_property_full_upload_period = 293;
   optional int32 display_property_incremental_upload_period = 294;
   optional int32 runtime_property_full_upload_period = 295;
   optional int32 runtime_property_incremental_upload_period = 296;
} 

message SmartMeterDisplayPropertyUpload {
  optional int32 utc_timezone = 133;
  optional string utc_timezone_id = 134;
  optional uint32 utc_set_mode = 135; //bool
  optional float totalPower = 515;
  
  optional float unknown618 = 618;
  optional uint32 unknown619 = 619; //bool?
  
  repeated string unknown627 = 627;
  repeated string unknown728 = 728;

  optional uint32 unknown729 = 729;
  optional uint32 unknown732 = 732;
  optional uint32 unknown733 = 733;
  optional uint32 unknown762 = 762;
  optional uint32 unknown763 = 763;
  optional uint32 unknown764 = 764;

  optional float voltageL3 = 771;
  optional float powerL3 = 772;
  optional SmartMeterEnergyArray energy = 773;
  //optional float currentL1 = 784;
  optional float voltageL1 = 956;
  optional float voltageL2 = 957;
  //optional float currentL3 = 958;
  //optional float currentL2 = 959;
  optional float powerL1 = 962;
  optional float powerL2 = 963;
  //optional uint32 unknown = 984;
}

message SmartMeterEnergyArray {
  optional float energyL1daily = 1; //Nettoverbrauch L1
  optional float energyL2daily = 2; //Nettoverbrauch L2
  optional float energyL3daily = 3; //Nettoverbrauch L3
  optional float lifeTimeEnergyConsumption = 4; // Lebenszeit Verbrauch
  optional float lifeTimeEnergyDelivery = 6; // Lebenszeit Einspeisung
  optional float netEnergyConsumption = 7; // Nettoverbrauch
}

message SmartMeterSetMessage {
    repeated SmartMeterSetHeader msg = 1;
}

message SmartMeterSetValue {
    optional int32 value = 1;
	optional int32 value2 = 2;
}

message SmartMeterSetHeader {
    bytes pdata = 1;
    int32 src = 2;
    int32 dest = 3;
    int32 d_src = 4;
    int32 d_dest = 5;
    int32 enc_type = 6;
    int32 check_type = 7;
    int32 cmd_func = 8;
    int32 cmd_id = 9;
    int32 data_len = 10;
    int32 need_ack = 11;
    int32 is_ack = 12;
    int32 seq = 14;
    int32 product_id = 15;
    int32 version = 16;
    int32 payload_ver = 17;
    int32 time_snap = 18;
    int32 is_rw_cmd = 19;
    int32 is_queue = 20;
    int32 ack_type = 21;
    string code = 22;
    string from_ = 23;
    string module_sn = 24;
    string device_sn = 25;
}

message SmartMeterSentDisplayPropertyUpload {
    SmartMeterSetHeader3 header = 1;
}

message SmartMeterSentRuntimePropertyUpload {
    SmartMeterSetHeader4 header = 1;
} 

 message SmartMeterSetHeader4 {
    SmartMeterRuntimePropertyUpload pdata = 1;
    int32 src = 2;
    int32 dest = 3;
    int32 d_src = 4;
    int32 d_dest = 5;
    int32 cmd_func = 8;
    int32 cmd_id = 9;
    int32 data_len = 10;
    int32 need_ack = 11;
    int32 is_ack = 12;
    int32 seq = 14;
    int32 product_id = 15;
    int32 version = 16;
    int32 payload_ver = 17;
}

 message SmartMeterSetHeader3 {
    SmartMeterDisplayPropertyUpload pdata = 1;
    int32 src = 2;
    int32 dest = 3;
    int32 d_src = 4;
    int32 d_dest = 5;
    int32 cmd_func = 8;
    int32 cmd_id = 9;
    int32 data_len = 10;
    int32 need_ack = 11;
    int32 is_ack = 12;
    int32 seq = 14;
    int32 product_id = 15;
    int32 version = 16;
    int32 payload_ver = 17;
}
